[package]
name = "code_snippets"
authors = ["Lann Martin <lann.martin@fermyon.com>"]
description = "Code Snippets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "canary" }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "e9c7c0a3405845cecd3fe06f3c20ab413302fc73" }